<resources>
    <string name="app_name">YASP</string>
    <string name="create_database">Create database</string>
    <string name="connect_to_server">Connect to the server</string>
    <string name="ip_address">IP address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="list_servers">List local servers</string>
    <string name="connect">Connect</string>
</resources>
