<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_ipAddress"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:editable="true"
        android:textAlignment="center"
        android:hint="@string/ip_address"
        android:text="192.168.1.3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_username"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:inputType="text"
        android:hint="@string/username"
        android:text="yasp_testing" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_password"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:hint="@string/password"
        android:textAlignment="center"
        android:text="yasp_testing" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_server"
        android:id="@+id/button_connectToServer"
        android:onClick="smbConnect" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_servers"
        android:id="@+id/button_listLocalServers"
        android:layout_gravity="center_horizontal"
        android:onClick="listLocalServers" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_info"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>
