<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.com.paweladamczuk.yasp.GetAuthInfoActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_GetAuthInfo_username"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/username" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_GetAuthInfo_password"
        android:layout_below="@+id/editText_GetAuthInfo_username"
        android:layout_centerHorizontal="true"
        android:hint="@string/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/button_GetAuthInfo_connect"
        android:layout_below="@+id/editText_GetAuthInfo_password"
        android:layout_centerHorizontal="true"
        android:onClick="connect" />
</RelativeLayout>
